[gd_scene load_steps=9 format=3 uid="uid://dw3fkahx3vh0t"]

[ext_resource type="Script" path="res://Charecters/Enemy - one/enemy.gd" id="1_6tntp"]
[ext_resource type="Texture2D" uid="uid://bjbugrspck6cw" path="res://Assets/Sleepy - enemy/enemy_dos.png" id="2_nurb5"]
[ext_resource type="AudioStream" uid="uid://b41d50ba538xn" path="res://sounds tracks/slimejump-6913.mp3" id="4_0ae40"]
[ext_resource type="AudioStream" uid="uid://i2htpg7odryg" path="res://sounds tracks/alien-screaming-82512.mp3" id="23_sauon"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0a3ja"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_nurb5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_75kgh"]
radius = 345.023

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mb6st"]
radius = 26.0
height = 148.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hapab"]
radius = 85.0
height = 170.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 22
motion_mode = 1
script = ExtResource("1_6tntp")

[node name="enemy_animation" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 3)
sprite_frames = SubResource("SpriteFrames_0a3ja")
animation = &"idle"

[node name="detection_area" type="Area2D" parent="enemy_animation"]
collision_layer = 8
collision_mask = 9

[node name="Detection" type="CollisionShape2D" parent="enemy_animation/detection_area"]
position = Vector2(0, 18)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_75kgh")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="Interaction" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 17)
shape = SubResource("CapsuleShape2D_mb6st")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(3, 18)
shape = SubResource("CapsuleShape2D_hapab")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_sauon")
volume_db = -50.0

[node name="AlienMovingAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_0ae40")

[connection signal="body_entered" from="enemy_animation/detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="enemy_animation/detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
